reduce app name length

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "MessengerPlatform Gem Sample App",
+  "name": "MessengerPlatform Sample App",
   "description": "A barebones rails app to demo Facebook's Messenger Platform capabilities",
   "repository": "https://github.com/tinkerbox/messenger_platform_demo",
   "keywords": ["facebook", "messenger", "rails"]
